@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1 2022/02/02 15:23:40 manu Exp $
+
+DISTNAME=	anyfontsize
+PKGNAME=	tex-${DISTNAME}-1.6
+TEXLIVE_REV=	17050
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	https://ctan.org/pkg/anyfontsize
+COMMENT=	Select any font size in LaTeX
+LICENSE=	lppl-1.3c
+
+DEPENDS+=	tex-tools-[0-9]*:../../print/tex-tools
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
