@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2022/02/02 15:23:40 manu Exp $
+share/texmf-dist/tex/latex/anyfontsize/anyfontsize.sty
