@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2022/02/02 15:23:40 manu Exp $
+
+SHA1 (anyfontsize.r17050.tar.xz) = 631f40de4433faba19f7a3365808c309c7ad1d2d
+RMD160 (anyfontsize.r17050.tar.xz) = 276cf25600fa2f9d8a226187c62de6e4cb284f2e
+SHA512 (anyfontsize.r17050.tar.xz) = 31d1c235d011998043663bc1f5729bd40c5b90996627038be612115daef2b3526c9e616b16c251d6b653d5bad82beee62a7dcfc3b8c10feec0850729afb294ea
+Size (anyfontsize.r17050.tar.xz) = 2112 bytes
